fix some font sizes and spacing and duplicate carousel divs

--- a/scss/object/component/_tables.scss
+++ b/scss/object/component/_tables.scss
@@ -4,7 +4,7 @@
     width:100%;
     border-spacing: 0;
     @include is-pc{
-        @include font-line(24);
+        @include font-line(18);
     }
     &__head{
         color:$colortext-secondary;
